fix overview bug when dragging out of bounds
clean up js and css code

--- a/www/plainpage.css
+++ b/www/plainpage.css
@@ -1,14 +1,12 @@
 body
 {
-    min-height: 100vh;
-    background-color: white;
-    display: initial;
+    grid: min-content 1fr / auto;
 }
 
-button,
-a
+body > *
 {
-    transition: background-color 0.1s;
+    grid-column: auto;
+    grid-row: auto;
 }
 
 nav
@@ -31,11 +29,8 @@ nav ul
 main
 {
     font-size: 1.2rem;
-}
-
-main *
-{
-    line-height: 1.3em;
+    line-height: 1.3;
+    background-color: #FBFBFB;
 }
 
 section
@@ -43,10 +38,9 @@ section
     padding: 2em 0;
 }
 
-section:nth-child(odd), 
-section:only-of-type
+section:nth-child(even)
 {
-    background-color: #FBFBFB;
+    background-color: white;
 }
 
 section:last-child
