--- a/www/stage.css
+++ b/www/stage.css
@@ -48,7 +48,7 @@ table
 .sidetop p
 {
     margin-top: 1em;
-    line-height: 1.75em;
+    line-height: 1.75;
 }
 
 #upload-area
@@ -694,12 +694,6 @@ main.grabbed .driftitem
 .table-section
 {
     position: relative;
-    z-index: 0;
-}
-
-.table-section-container
-{
-    position: relative;
     border-left: 1.25px solid #DDDDDD;
     background-color: var(--neutral-300);
     display: flex;
@@ -707,12 +701,12 @@ main.grabbed .driftitem
     justify-content: space-between;
 }
 
-.table-section-container > span
+.table-section > span
 {
     padding: 0.5em 1em;
 }
 
-.table-section-container > span:last-child
+.table-section > span:last-child
 {
     font-style: italic;
 }
@@ -773,14 +767,15 @@ main.grabbed .driftitem
     transform: translateY(101%);
     opacity: 0;
     box-shadow: 0px 0px 6px 0px #00000040;
-    transition: transform 0.2s, background-color 0.1s, opacity 0.2s;
+    visibility: hidden;
+    transition: transform 0.2s, background-color 0.1s, opacity 0.2s, visibility 0.2s;
 }
 
 .table-wrapper:hover .copy-btn,
 .table-wrapper:focus-within .copy-btn
 {
+    visibility: visible;
     opacity: 1;
-    transition: transform 0.2s, background-color 0.1s, opacity 0.2s;
     transform: translateY(0.5em);
 }
 
@@ -792,7 +787,7 @@ main.grabbed .driftitem
 .drift-table
 {
     font-weight: 300;
-    line-height: 1.2em;
+    line-height: 1.2;
     opacity: 0.9;
 }
 
@@ -994,9 +989,14 @@ main.grabbed .driftitem
     {
         transition: box-shadow ease 0.1s, background-color 0.1s;
     }
+
+    .copy-btn
+    {
+        transform: translateY(0.5em);
+    }
 }
 
-/* SCROLLBARS SCROLLBARS SCROLLBARS AND THEY DONT EVEN WORK ANYWHERE ELSE BUT CHROME */
+/* SCROLLBARS SCROLLBARS SCROLLBARS */
 
 .file-list-area ::-webkit-scrollbar
 {
